--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,22 @@ body {
 }
 
 /* Shopping Cart */
+#shopping-cart-button {
+  position: relative;
+}
+
+.quantity-badge {
+  display: inline-block;
+  padding: 1px 5px;
+  background-color: red;
+  border-radius: 50%;
+  font-size: 0.8rem;
+  position: absolute;
+  top: 0;
+  right: -10px;
+  color: white;
+}
+
 .shopping-cart {
   position: absolute;
   top: 100%;
@@ -199,9 +215,13 @@ body {
   /* background: salmon; */
   inset: 0;
   -webkit-mask-image: url('../img/header-bg.svg');
+  mask-image: url('../img/header-bg.svg');
   -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
   -webkit-mask-size: cover;
+  mask-size: cover;
   -webkit-mask-position: center;
+  mask-position: center;
 }
 
 .hero .content {
@@ -400,12 +420,6 @@ body {
 .products .product-price {
   font-size: 1.3rem;
   font-weight: bold;
-}
-
-.products .product-price span {
-  text-decoration: line-through;
-  font-weight: lighter;
-  font-size: 1rem;
 }
 
 /* Contact Section */
