--- a/css/style.css
+++ b/css/style.css
@@ -163,27 +163,28 @@ body {
 }
 
 .shopping-cart img {
-  height: 6rem;
+  height: 4rem;
   border-radius: 50%;
 }
 
 .shopping-cart h3 {
-  font-size: 1.6rem;
-  padding-bottom: 0.5rem;
+  font-size: 1.4rem;
 }
 
 .shopping-cart .item-price {
   font-size: 1.2rem;
 }
 
-.shopping-cart .remove-item {
-  position: absolute;
-  right: 1rem;
+.shopping-cart #add,
+.shopping-cart #remove {
+  display: inline-block;
+  padding: 2px 5px;
   cursor: pointer;
-}
-
-.shopping-cart .remove-item:hover {
-  color: var(--primary);
+  margin: 0px 8px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  font-size: 1.1rem;
 }
 
 /* Hero Section */
