feat: cart system

--- a/css/style.css
+++ b/css/style.css
@@ -187,6 +187,12 @@ body {
   font-size: 1.1rem;
 }
 
+.shopping-cart h4 {
+  font-size: 1.6rem;
+  margin-top: -1rem;
+  text-align: center;
+}
+
 /* Hero Section */
 .hero {
   min-height: 100vh;
@@ -300,9 +306,13 @@ body {
 .about .row .about-img img {
   width: 100%;
   -webkit-mask-image: url('../img/menu/splash.svg');
+  mask-image: url('../img/menu/splash.svg');
   -webkit-mask-size: 50%;
+  mask-size: 50%;
   -webkit-mask-repeat: no-repeat;
+  mask-repeat: no-repeat;
   -webkit-mask-position: center;
+  mask-position: center;
 }
 
 .about .row .content {
