--- a/css/style.css
+++ b/css/style.css
@@ -146,6 +146,7 @@ body {
   background-color: #fff;
   color: var(--bg);
   transition: 0.3s;
+  overflow: auto;
 }
 
 .shopping-cart.active {
@@ -201,6 +202,7 @@ body {
   border-top: 1px dashed black;
   margin-top: 1rem;
   padding: 1rem;
+  margin-bottom: 100px;
 }
 
 .form-container h5 {
@@ -240,6 +242,11 @@ body {
   border-radius: 20px;
   margin: 1rem auto;
   cursor: pointer;
+}
+
+.form-container .checkout-button.disabled {
+  background-color: #999;
+  cursor: not-allowed;
 }
 
 /* Hero Section */
